// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrepareResultForMorda должен отдать результат для div2 в експе autoru-separated-view-tabs в inserts прост 1`] = `
Object {
  "main": Object {
    "show_all_text": "Посмотреть все объявления",
    "title": "Авто.ру",
    "url": Object {
      "desktop": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=links&utm_content=autoru-separated-view-tabs",
      "mobile": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=links&utm_content=autoru-separated-view-tabs",
    },
  },
  "tabs": Array [
    Object {
      "content": Array [
        Object {
          "id": "1098979042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1098979042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
      ],
      "title": "Просмотренные",
      "type": "viewed",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1098979042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1098979042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1098979042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=showmore",
      "title": "Рекомендуем",
      "type": "recommended",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099489178",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/456x342",
          },
          "nameplate": "BMW X3, 2020",
          "price": "3 970 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
        Object {
          "id": "1099534832",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/456x342",
          },
          "nameplate": "BMW 5 серия, 2020",
          "price": "3 920 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=autoru-separated-view-tabs#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=autoru-separated-view-tabs#priceRange",
          },
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=showmore",
      "title": "Машины от дилеров",
      "type": "diler_auto",
    },
  ],
}
`;

exports[`PrepareResultForMorda должен отдать результат для div2 в експе autoru-separated-view-tabs прост 1`] = `
Object {
  "main": Object {
    "show_all_text": "Посмотреть все объявления",
    "title": "Авто.ру",
    "url": Object {
      "desktop": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=links&utm_content=autoru-separated-view-tabs",
      "mobile": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=links&utm_content=autoru-separated-view-tabs",
    },
  },
  "recommendedCampaign": "recommended-hotstart",
  "tabs": Array [
    Object {
      "content": Array [
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
      ],
      "title": "Просмотренные",
      "type": "viewed",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=autoru-separated-view-tabs#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=showmore",
      "title": "Рекомендуем",
      "type": "recommended",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099489178",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/456x342",
          "nameplate": "BMW X3, 2020",
          "price": "3 970 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=autoru-separated-view-tabs#priceRange",
        },
        Object {
          "id": "1099534832",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/456x342",
          "nameplate": "BMW 5 серия, 2020",
          "price": "3 920 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=autoru-separated-view-tabs#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=showmore",
      "title": "Машины от дилеров",
      "type": "diler_auto",
    },
  ],
}
`;

exports[`PrepareResultForMorda должен отдать результат для div2 прост 1`] = `
Object {
  "main": Object {
    "show_all_text": "Посмотреть все объявления",
    "title": "Авто.ру",
    "url": Object {
      "desktop": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
      "mobile": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
    },
  },
  "recommendedCampaign": "recommended-hotstart",
  "tabs": Array [
    Object {
      "content": Array [
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=showmore",
      "title": "Рекомендуем",
      "type": "recommended",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099489178",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/456x342",
          "nameplate": "BMW X3, 2020",
          "price": "3 970 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099534832",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/456x342",
          "nameplate": "BMW 5 серия, 2020",
          "price": "3 920 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=showmore",
      "title": "Машины от дилеров",
      "type": "diler_auto",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099596102",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Ford Focus, 2011",
          "price": "439 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099596102&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=offer#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=showmore",
      "title": "1 владелец",
      "type": "1_vladelec",
    },
  ],
}
`;

exports[`PrepareResultForMorda должен отдать результат для div2 с несколькими экспами и не поломаться 1`] = `
Object {
  "main": Object {
    "show_all_text": "Посмотреть все объявления",
    "title": "Авто.ру",
    "url": Object {
      "desktop": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
      "mobile": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
    },
  },
  "recommendedCampaign": "recommended-hotstart",
  "tabs": Array [
    Object {
      "content": Array [
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=showmore",
      "title": "Рекомендуем",
      "type": "recommended",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099489178",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/456x342",
          "nameplate": "BMW X3, 2020",
          "price": "3 970 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099534832",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/456x342",
          "nameplate": "BMW 5 серия, 2020",
          "price": "3 920 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=showmore",
      "title": "Машины от дилеров",
      "type": "diler_auto",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099596102",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Ford Focus, 2011",
          "price": "439 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099596102&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=offer#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=showmore",
      "title": "1 владелец",
      "type": "1_vladelec",
    },
  ],
}
`;

exports[`PrepareResultForMorda должен отдать результат для div2 с переименованным первым табом и подмешанным оффером из просмотренных 1`] = `
Object {
  "main": Object {
    "show_all_text": "Посмотреть все объявления",
    "title": "Авто.ру",
    "url": Object {
      "desktop": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
      "mobile": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
    },
  },
  "recommendedCampaign": "recommended-hotstart",
  "tabs": Array [
    Object {
      "content": Array [
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto_rec&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099489178",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/456x342",
          "nameplate": "BMW X3, 2020",
          "price": "3 970 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto_rec&utm_content=offer#priceRange",
        },
        Object {
          "id": "1099534832",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/456x342",
          "nameplate": "BMW 5 серия, 2020",
          "price": "3 920 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto_rec&utm_content=offer#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto_rec&utm_content=showmore",
      "title": "Рекомендуем",
      "type": "diler_auto_rec",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099596102",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Ford Focus, 2011",
          "price": "439 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099596102&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=offer#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=showmore",
      "title": "1 владелец",
      "type": "1_vladelec",
    },
  ],
}
`;

exports[`PrepareResultForMorda должен отдать результат для div2 с экспом про ссылки для контрольной группы 1`] = `
Object {
  "main": Object {
    "show_all_text": "Посмотреть все объявления",
    "title": "Авто.ру",
    "url": Object {
      "desktop": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=links&utm_content=listinglinks_etalon",
      "mobile": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=links&utm_content=listinglinks_etalon",
    },
  },
  "recommendedCampaign": "recommended-hotstart",
  "tabs": Array [
    Object {
      "content": Array [
        Object {
          "id": "1098979042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=listinglinks_etalon#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=listinglinks_etalon#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=listinglinks_etalon#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=listinglinks_etalon#priceRange",
        },
        Object {
          "id": "1099466042",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=listinglinks_etalon#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=showmore",
      "title": "Рекомендуем",
      "type": "recommended",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099489178",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/456x342",
          "nameplate": "BMW X3, 2020",
          "price": "3 970 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=listinglinks_etalon#priceRange",
        },
        Object {
          "id": "1099534832",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/456x342",
          "nameplate": "BMW 5 серия, 2020",
          "price": "3 920 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=listinglinks_etalon#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=showmore",
      "title": "Машины от дилеров",
      "type": "diler_auto",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099596102",
          "image": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          "nameplate": "Ford Focus, 2011",
          "price": "439 000 ₽",
          "url": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099596102&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=listinglinks_etalon#priceRange",
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=showmore",
      "title": "1 владелец",
      "type": "1_vladelec",
    },
  ],
}
`;

exports[`PrepareResultForMorda должен отдать результат для inserts desktop 1`] = `
Object {
  "main": Object {
    "show_all_text": "Посмотреть все объявления",
    "title": "Авто.ру",
    "url": Object {
      "desktop": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
      "mobile": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
    },
  },
  "tabs": Array [
    Object {
      "content": Array [
        Object {
          "id": "1098979042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=showmore",
      "title": "Рекомендуем",
      "type": "recommended",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099489178",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/456x342",
          },
          "nameplate": "BMW X3, 2020",
          "price": "3 970 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099534832",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/456x342",
          },
          "nameplate": "BMW 5 серия, 2020",
          "price": "3 920 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
          },
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=showmore",
      "title": "Машины от дилеров",
      "type": "diler_auto",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099596102",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Ford Focus, 2011",
          "price": "439 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099596102&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099596102&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=offer#priceRange",
          },
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=showmore",
      "title": "1 владелец",
      "type": "1_vladelec",
    },
  ],
}
`;

exports[`PrepareResultForMorda должен отдать результат для inserts touch 1`] = `
Object {
  "main": Object {
    "show_all_text": "Посмотреть все объявления",
    "title": "Авто.ру",
    "url": Object {
      "desktop": "https://autoru_frontend.base_domain/cars/all/?from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
      "mobile": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=links&utm_content=title",
    },
  },
  "tabs": Array [
    Object {
      "content": Array [
        Object {
          "id": "1098979042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1098979042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099466042",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Mercedes-Benz B-Класс, 2012",
          "price": "990 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099466042&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=offer#priceRange",
          },
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=recommended-hotstart&utm_content=showmore",
      "title": "Рекомендуем",
      "type": "recommended",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099489178",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1906423/3c89bf99a010cf98b677264d126f1f16/456x342",
          },
          "nameplate": "BMW X3, 2020",
          "price": "3 970 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099489178&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
          },
        },
        Object {
          "id": "1099534832",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1669622/eabe3ad0b2488d524f92d2f0e9f2a3cb/456x342",
          },
          "nameplate": "BMW 5 серия, 2020",
          "price": "3 920 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099534832&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=offer#priceRange",
          },
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=diler_auto&utm_content=showmore",
      "title": "Машины от дилеров",
      "type": "diler_auto",
    },
    Object {
      "content": Array [
        Object {
          "id": "1099596102",
          "image": Object {
            "x1": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/thumb_m",
            "x2": "https://images.mds-proxy.test.avto.ru/get-autoru-vos/1978750/565b6cb31498d3fb7fcef6939e6ec3f3/456x342",
          },
          "nameplate": "Ford Focus, 2011",
          "price": "439 000",
          "url": Object {
            "desktop": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099596102&from=web_block&utm_source=web_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=offer#priceRange",
            "mobile": "https://autoru_frontend.base_domain/cars/all/?pinned_offer_id=autoru-1099596102&from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=offer#priceRange",
          },
        },
      ],
      "listingUrl": "https://autoru_frontend.base_domain/cars/all/?from=mobweb_block&utm_source=mobweb_block&utm_medium=cpc&utm_campaign=1_vladelec&utm_content=showmore",
      "title": "1 владелец",
      "type": "1_vladelec",
    },
  ],
}
`;
